--- a/layers/meta-balena-st-ecu1370/conf/layer.conf
+++ b/layers/meta-balena-st-ecu1370/conf/layer.conf
@@ -16,3 +16,10 @@ BBMASK .= " .*/meta-fsl-bsp-release/imx/meta-bsp/recipes-browser "
 BBMASK .= " .*/meta-freescale/recipes-graphics"
 BBMASK .= " .*/meta-freescale/dynamic-layers"
 BBMASK .= " .*/meta-freescale/recipes-multimedia"
+
+MIRRORS += " \
+    git://source.codeaurora.org/external/imx/ git://github.com/nxp-imx/;protocol=https \n \
+    https://source.codeaurora.org/external/imx/ https://github.com/nxp-imx/ \n \
+    http://source.codeaurora.org/external/imx/ http://github.com/nxp-imx/ \n \
+    gitsm://source.codeaurora.org/external/imx/ gitsm://github.com/nxp-imx/;protocol=https \n \
+"
