--- a/.gitmodules
+++ b/.gitmodules
@@ -13,18 +13,24 @@
 [submodule "layers/meta-adv-imx"]
 	path = layers/meta-adv-imx
 	url = https://github.com/Advantech-IIoT/meta-adv-imx
+	branch = kirkstone-5.15.71-2.2.0
 [submodule "layers/meta-freescale"]
 	path = layers/meta-freescale
 	url = https://github.com/Freescale/meta-freescale
+	branch = kirkstone
 [submodule "layers/meta-freescale-3rdparty"]
 	path = layers/meta-freescale-3rdparty
 	url = https://github.com/Freescale/meta-freescale-3rdparty
+	branch = kirkstone
 [submodule "layers/meta-freescale-distro"]
 	path = layers/meta-freescale-distro
 	url = https://github.com/Freescale/meta-freescale-distro
+	branch = kirkstone
 [submodule "layers/poky"]
 	path = layers/poky
 	url = https://git.yoctoproject.org/git/poky
+	branch = kirkstone
 [submodule "layers/meta-openembedded"]
 	path = layers/meta-openembedded
 	url = https://github.com/openembedded/meta-openembedded
+	branch = kirkstone
